// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceContentNav show interface information when status is failed 1`] = `
<Context.Provider
  value={
    Object {
      "t": [MockFunction],
    }
  }
>
  <DeviceInterfaces
    history={
      Object {
        "location": Object {
          "pathname": "#/devices/detail/digitalTwins/interfaces/",
          "search": "id=device1&interfaceId=urn:some:interface:name:1",
        },
      }
    }
    isLoading={false}
    location={
      Object {
        "pathname": "#/devices/detail/digitalTwins/interfaces/",
        "search": "id=device1&interfaceId=urn:some:interface:name:1",
      }
    }
    match={
      Object {
        "params": Object {},
      }
    }
    modelDefinitionWithSource={
      Object {
        "modelDefinitionSynchronizationStatus": 5,
      }
    }
    modelSyncStatus={5}
    refresh={[MockFunction]}
    setInterfaceId={[MockFunction]}
    settingsVisibleToggle={[MockFunction]}
  />
</Context.Provider>
`;

exports[`components/devices/deviceContentNav show interface information when status is fetched 1`] = `
<Context.Provider
  value={
    Object {
      "t": [MockFunction],
    }
  }
>
  <DeviceInterfaces
    history={
      Object {
        "location": Object {
          "pathname": "#/devices/detail/digitalTwins/interfaces/",
          "search": "id=device1&interfaceId=urn:some:interface:name:1",
        },
      }
    }
    isLoading={false}
    location={
      Object {
        "pathname": "#/devices/detail/digitalTwins/interfaces/",
        "search": "id=device1&interfaceId=urn:some:interface:name:1",
      }
    }
    match={
      Object {
        "params": Object {},
      }
    }
    modelDefinitionWithSource={
      Object {
        "modelDefinition": Object {
          "@context": "http://azureiot.com/v1/contexts/Interface.json",
          "@id": "urn:azureiot:ModelDiscovery:DigitalTwin:1",
          "@type": "Interface",
          "contents": Array [
            Object {
              "@type": "Property",
              "description": "Providing model and optional interfaces information on a digital twin.",
              "displayName": "Model Information",
              "name": "modelInformation",
              "schema": Object {
                "@type": "Object",
                "fields": Array [
                  Object {
                    "name": "modelId",
                    "schema": "string",
                  },
                  Object {
                    "name": "interfaces",
                    "schema": Object {
                      "@type": "Map",
                      "mapKey": Object {
                        "name": "name",
                        "schema": "string",
                      },
                      "mapValue": Object {
                        "name": "schema",
                        "schema": "string",
                      },
                    },
                  },
                ],
              },
            },
          ],
          "displayName": "Digital Twin",
        },
        "modelDefinitionSynchronizationStatus": 1,
        "source": "PUBLIC",
      }
    }
    modelSyncStatus={1}
    refresh={[MockFunction]}
    setInterfaceId={[MockFunction]}
    settingsVisibleToggle={[MockFunction]}
  />
</Context.Provider>
`;
